deleted / from link favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LNS-test</title>
     <!-- иконка -->
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png">  
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">  
     <!--Подключаем файлик с js-->
     <link href="js/javascript.js">
     <!--Подключаем файлик со стилями-->
