--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="header">
         <div class="nav">
-            <H1>LNS</H1>
+            <div class="logo">LNS</div>
             <ul>
                 <li>Home</li>
                 <li>About</li>
