--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <div class="logo">LNS</div>
             <div class="menu">
                 <a href="#home" class="menu-color">Home</a>
-                <a href="#two" class="menu-color">About</a>
-                <a href="#three" class="menu-color">Services</a>
-                <a href="#four" class="menu-color">Contacts</a>
+                <a href="#about" class="menu-color">About</a>
+                <a href="#services" class="menu-color">Services</a>
+                <a href="#contacts" class="menu-color">Contacts</a>
             </div>
         </div>
     </div>
@@ -49,7 +49,7 @@
         <button class="slider__control" data-slide="next"></button>
     </div>
 
-    <div class="welcome screen" id="two">
+    <div class="welcome screen" id="about">
         <h2>WELCOME TO LINA NAIL STUDIO</h2>
         <p>Здесь ты найдёшь свое вдохновение и получишь максимальное удовольствие 
             от процедуры.
@@ -57,13 +57,13 @@
             про ухоженные руки, но ещё и про уверенность в себе и любовь</p>
     </div>
 
-    <div class="studio screen">
+    <div class="studio">
         <div class="studio__image">
             <img src="images/studio/IMG20220622185114.png" alt="Our studio">
         </div>
     </div>
 
-    <div class="services screen" id="three">
+    <div class="services screen" id="services">
         <h2>ПРАЙС-ЛИСТ</h2>
         <div class="container__services">
             <table class="resp-tab">
@@ -107,7 +107,7 @@
         </div>
     </div>
 
-    <div class="footer" id="four">
+    <div class="footer screen" id="contacts">
         <div class="footer__info">
             <h3>CONTACT INFO</h3>
             <p>Вы можете написать в Telegram или instagram в direct для записи и уточнения времени</p>
