--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LNS-test</title>
+    <title>Lina Nails Studio</title>
     <!-- иконка -->
     <link rel="icon" type="image/x-icon" href="images/favicon.png">  
     <!--Подключаем файлик с js-->
@@ -115,18 +115,14 @@
         <div class="footer__instagram">
             <h3>OUR INSTAGRAM</h3>
             <div class="insta_photos">
-                    <img src="images/insta_photos/Screenshot_1.png" alt="Instagram photo 1">
-
-                    <img src="images/insta_photos/Screenshot_2.png" alt="Instagram photo 2">
-
-                    <img src="images/insta_photos/Screenshot_3.png" alt="Instagram photo 3">
-
-                    <img src="images/insta_photos/Screenshot_4.png" alt="Instagram photo 4">
-
-                    <img src="images/insta_photos/Screenshot_5.png" alt="Instagram photo 5">
-
-                    <img src="images/insta_photos/Screenshot_6.png" alt="Instagram photo 6">
-
+                    <a href="https://www.instagram.com/lns_nail/">
+                        <img src="images/insta_photos/Screenshot_1.png" alt="Instagram photo 1">
+                        <img src="images/insta_photos/Screenshot_2.png" alt="Instagram photo 2">
+                        <img src="images/insta_photos/Screenshot_3.png" alt="Instagram photo 3">
+                        <img src="images/insta_photos/Screenshot_4.png" alt="Instagram photo 4">
+                        <img src="images/insta_photos/Screenshot_5.png" alt="Instagram photo 5">
+                        <img src="images/insta_photos/Screenshot_6.png" alt="Instagram photo 6">
+                    </a>
             </div>
         </div>
     </div>
