--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="booking">
         <div class="booking__button">
-            <a href="https://www.instagram.com/direct/t/340282366841710300949128181286419762973">
+            <a href="https://www.instagram.com/lns_nail/">
                 <h2>Записаться</h2>
             </a>
         </div>
@@ -119,6 +119,7 @@
         <div class="footer__info">
             <h3>CONTACT INFO</h3>
             <p>Вы можете написать в Telegram или instagram в direct для записи и уточнения времени</p>
+            <p>Студия расположена в Нови Београд, блок 63</p>
         </div>
         <div class="footer__instagram">
             <h3>OUR INSTAGRAM</h3>
