--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
     <!-- Подключение css и js слайдера -->
     <link rel="stylesheet" href="style/itc-slider.css">
     <script src="js/itc-slider.js" defer></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJ1QL82CVP"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-RJ1QL82CVP');
+    </script>
 </head>
+
 <body>
     <div class="header">
         <div class="nav">
