--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="header">
         <div class="nav">
             <div class="logo">LNS</div>
-            <div class="menu">
+            <div class="menu font-head">
                 <a href="#home" class="menu-color">Home</a>
                 <a href="#about" class="menu-color">About</a>
                 <a href="#services" class="menu-color">Services</a>
@@ -62,17 +62,17 @@
     </div>
 
     <div class="welcome screen" id="about">
-        <h2>WELCOME TO LINA NAIL STUDIO</h2>
-        <p>Здесь ты найдёшь свое вдохновение и получишь максимальное удовольствие 
-            от процедуры.
-            Ведь маникюр это не только 
-            про ухоженные руки, но ещё и про уверенность в себе и любовь</p>
+        <h2 class="font-head"><span>WELCOME</span> TO LINA NAIL STUDIO</h2>
+        <p class="font-paragraph">Here you will find your inspiration and get maximum pleasure.
+            from the procedure.
+            After all, a manicure is not only
+            about well-groomed hands, but also about self-confidence and love.</p>
     </div>
 
     <div class="booking">
         <div class="booking__button">
             <a href="https://www.instagram.com/lns_nail/">
-                <h2>Записаться</h2>
+                <h2>Book now</h2>
             </a>
         </div>
     </div>
@@ -84,43 +84,43 @@
     </div>
 
     <div class="services screen" id="services">
-        <h2>ПРАЙС-ЛИСТ</h2>
+        <h2 class="font-head">PRICE-LIST</h2>
         <div class="container__services">
             <table class="resp-tab">
                 <thead>
                     <tr>
-                        <th>Наименование услуги</th>
-                        <th>Цена</th>
+                        <th>Name of service</th>
+                        <th>Price</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td><span>Наименование услуги</span>Комби / аппаратный маникюр без покрытия</td>
-                        <td><span>Цена</span>1700 RSD</td>
+                        <td><span>Name of service</span>Сombined manicure / hardware manicure without cover</td>
+                        <td><span>Price</span>1700 RSD</td>
                     </tr>     
                     <tr>
-                        <td><span>Наименование услуги</span>Комби / аппаратный маникюр с покрытием однотон</td>
-                        <td><span>Цена</span>2000 RSD</td>
+                        <td><span>Name of service</span>Сombined manicure / hardware manicure coated monochrome</td>
+                        <td><span>Price</span>2000 RSD</td>
                     </tr>
                     <tr>
-                        <td><span>Наименование услуги</span>Ремонт / Донаращивание 1 ногтя</td>
-                        <td><span>Цена</span>300 RSD</td>
+                        <td><span>Name of service</span>Repair / rebuilding 1 nail</td>
+                        <td><span>Price</span>300 RSD</td>
                     </tr>
                     <tr>
-                        <td><span>Наименование услуги</span>Укрепление гелем</td>
-                        <td><span>Цена</span>700 RSD</td>
+                        <td><span>Name of service</span>Gel strengthening</td>
+                        <td><span>Price</span>700 RSD</td>
                     </tr>
                     <tr>
-                        <td><span>Наименование услуги</span>Снятие без дальнейшего покрытия и маникюра</td>
-                        <td><span>Цена</span>500 RSD</td>
+                        <td><span>Name of service</span>Removal without coating and manicure</td>
+                        <td><span>Price</span>500 RSD</td>
                     </tr>
                     <tr>
-                        <td><span>Наименование услуги</span>Мужской маникюр без покрытия</td>
-                        <td><span>Цена</span>2000 RSD</td>
+                        <td><span>Name of service</span>Male manicure without coating</td>
+                        <td><span>Price</span>2000 RSD</td>
                     </tr>
                     <tr>
-                        <td><span>Наименование услуги</span>Дизайн по запросу (оговариваем заранее)</td>
-                        <td><span>Цена</span>От 100 до 1000 RSD</td>
+                        <td><span>Name of service</span>Design on request (negotiated in advance)</td>
+                        <td><span>Price</span>From 100 to 1000 RSD</td>
                     </tr>
                 </tbody>
             </table>
@@ -129,12 +129,11 @@
 
     <div class="footer screen" id="contacts">
         <div class="footer__info">
-            <h3>CONTACT INFO</h3>
-            <p>Вы можете написать в Telegram или instagram в direct для записи и уточнения времени</p>
-            <p>Студия расположена в Нови Београд, блок 63</p>
+            <h3 class="font-head">CONTACT INFO</h3>
+            <p class="font-paragraph">You can write to Telegram or instagram in direct to record and specify the time. The studio is located in Novi Beograd, block 63. To clarify the exact address, use the "Book now" button</p>
         </div>
         <div class="footer__instagram">
-            <h3>OUR INSTAGRAM</h3>
+            <h3 class="font-head">OUR INSTAGRAM</h3>
             <div class="insta_photos">
                     <a href="https://www.instagram.com/lns_nail/">
                         <img src="images/insta_photos/Screenshot_1.png" alt="Instagram photo 1">
