--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <div class="header">
         <div class="nav">
-            <div class="logo">LNS</div>
+            <div class="logo"><img src="images/logo_negate.png" alt="nail studio belgrade beograde"></div>
             <div class="menu font-head">
                 <a href="#home" class="menu-color">Home</a>
                 <a href="#about" class="menu-color">About</a>
@@ -44,16 +44,16 @@
         <div class="slider__wrapper">
             <div class="slider__items">
                 <div class="slider__item">
-                    <img src="images/slides_pictures/small/Screenshot_1.png" alt="">
+                    <img src="images/slides_pictures/small/Screenshot_1.png" alt="photo one">
                 </div>
                 <div class="slider__item">
-                    <img src="images/slides_pictures/small/Screenshot_2.png" alt="">
+                    <img src="images/slides_pictures/small/Screenshot_2.png" alt="photo two">
                 </div>
                 <div class="slider__item">
-                    <img src="images/slides_pictures/small/Screenshot_3.png" alt="">
+                    <img src="images/slides_pictures/small/Screenshot_3.png" alt="photo three">
                 </div>
                 <div class="slider__item">
-                    <img src="images/slides_pictures/small/Screenshot_4.png" alt="">
+                    <img src="images/slides_pictures/small/Screenshot_4.png" alt="photo four">
                 </div>
             </div>
         </div>
@@ -79,7 +79,7 @@
 
     <div class="studio">
         <div class="studio__image">
-            <img src="images/studio/IMG20220622185114.png" alt="Our studio">
+            <img src="images/studio/IMG20220622185114.png" alt="studio photo">
         </div>
     </div>
 
