--- a/index.html
+++ b/index.html
@@ -42,7 +42,30 @@
         </div>
     </div>
 
-    <div class="slider screen" data-slider="itc-slider" id="home">
+    <div class="welcome screen" id="about">
+        <div class="welcome__font-block">
+            <h2><span>LINA</span><br>NAIL STUDIO</h2>
+            <p>Hello, I'm Lina. This is my personal studio of nail in Belgrade. If you want to have beautiful fingers, let's see how it diding.</p>
+        </div>
+        <div class="welcome__picture-block">
+            <div class="nail__window"></div>
+        </div>
+    </div>
+
+
+                <!-- Here you will find your inspiration and get maximum pleasure from the procedure.
+            After all, a manicure is not only
+            about well-groomed hands, but also about self-confidence and love. -->
+
+    <!-- <div class="booking">
+        <div class="booking__button">
+            <a href="https://www.instagram.com/lns_nail/">
+                <h2>Book now</h2>
+            </a>
+        </div>
+    </div> -->
+
+    <!-- <div class="slider screen" data-slider="itc-slider" id="home">
         <div class="slider__wrapper">
             <div class="slider__items">
                 <div class="slider__item">
@@ -61,22 +84,6 @@
         </div>
         <button class="slider__control" data-slide="prev"></button>
         <button class="slider__control" data-slide="next"></button>
-    </div>
-
-    <div class="welcome screen" id="about">
-        <h2 class="font-head"><span>WELCOME</span> TO LINA NAIL STUDIO</h2>
-        <p class="font-paragraph">Here you will find your inspiration and get maximum pleasure.
-            from the procedure.
-            After all, a manicure is not only
-            about well-groomed hands, but also about self-confidence and love.</p>
-    </div>
-
-    <div class="booking">
-        <div class="booking__button">
-            <a href="https://www.instagram.com/lns_nail/">
-                <h2>Book now</h2>
-            </a>
-        </div>
     </div>
 
     <div class="studio">
@@ -149,7 +156,11 @@
         </div>
     </div>
 
-    <div class="btn-to-top"></div>
+    <div class="btn-to-top">
+        <div class="arrow__btn-to-top">        
+            <svg width="11" height="13" viewBox="0 0 11 13" fill="white" transform="rotate(-90)" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1.525 12.2226C1.19167 12.4393 0.854 12.4516 0.512 12.2596C0.170667 12.0683 0 11.7726 0 11.3726V1.02259C0 0.62259 0.170667 0.32659 0.512 0.13459C0.854 -0.0567435 1.19167 -0.0440767 1.525 0.17259L9.675 5.34759C9.975 5.54759 10.125 5.83092 10.125 6.19759C10.125 6.56426 9.975 6.84759 9.675 7.04759L1.525 12.2226Z" fill="white"/></div>
+    </div> -->
 
     <!-- <script>
         const changeByScroll = document.querySelector('.btn-to-top');
@@ -161,6 +172,6 @@
             } else changeByScroll.classList.remove('appear')
         });
     </script> -->
-    <script src="js/btn_to_top.js"></script>
+    <!-- <script src="js/btn_to_top.js"></script> -->
 </body>
 </html>
