--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJ1QL82CVP"></script>
+    <!-- GOOGLE search -->
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-
         gtag('config', 'G-RJ1QL82CVP');
     </script>
+    <script src="js/glow-button.js" type="module"></script>
+    <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.4.2/chroma.min.js"></script>
 </head>
 
 <body>
@@ -52,6 +55,12 @@
         </div>
     </div>
 
+    <div class="booking">
+        <button class="glow-button">
+            <span>Button</span>
+        </button>
+    </div>
+
 
                 <!-- Here you will find your inspiration and get maximum pleasure from the procedure.
             After all, a manicure is not only
@@ -64,6 +73,7 @@
             </a>
         </div>
     </div> -->
+
 
     <!-- <div class="slider screen" data-slider="itc-slider" id="home">
         <div class="slider__wrapper">
