--- a/index.html
+++ b/index.html
@@ -102,18 +102,22 @@
         <div class="cards">
             <div class="card active">
                 <p>Сombined manicure / hardware manicure without cover</p>
+                
                 <p>Price 1700 RSD</p>
             </div>
             <div class="card">
                 <p>Сombined manicure / hardware manicure coated monochrome</p>
+                <img src="https://media.makeameme.org/created/hello-mf.jpg" alt="">
                 <p>Price 2000 RSD</p>
             </div>
             <div class="card">
                 <p>Repair / rebuilding 1 nail</p>
+                <img src="https://www.meme-arsenal.com/memes/ffc13559c9f9c06d8037a37e53626878.jpg" alt="">
                 <p>Price 300 RSD</p>
             </div>
             <div class="card">
                 <p>Gel strengthening</p>
+                <img src="https://s3.memeshappen.com/memes/Oops-My-bad.jpg" alt="">
                 <p>Price 700 RSD</p>
             </div>
             <div class="card">
