--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     </script>
     <script src="js/itc-slider.js" type="module"></script><!--Слайдер-->
     <script src="js/services.js" type="module"></script><!--Услуги-->
-    <script src="js/glow-button.js" type="module"></script>
+    <script src="js/glow-button.js" type="module"></script><!--Фиолетовая кнопка-->
+    <script src="js/btn_to_top.js" type="module"></script><!--Кнопка вверх-->
     <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.4.2/chroma.min.js"></script>
 </head>
@@ -170,6 +171,14 @@
         </div>
     </div>
 
+    <div class="btn-to-top">
+        <div class="arrow__btn-to-top">  
+            <svg width="60" height="60" viewBox="0 -1 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M9.42501 14C8.97501 14 8.66268 13.7957 8.48801 13.387C8.31268 12.979 8.38335 12.6167 8.70001 12.3L11.3 9.70002C11.4 9.60002 11.5083 9.52503 11.625 9.47503C11.7417 9.42503 11.8667 9.40002 12 9.40002C12.1333 9.40002 12.2583 9.42503 12.375 9.47503C12.4917 9.52503 12.6 9.60002 12.7 9.70002L15.3 12.3C15.6167 12.6167 15.6873 12.979 15.512 13.387C15.3373 13.7957 15.025 14 14.575 14H9.42501Z" fill="black"/>
+            </svg>
+            <!-- <svg width="11" height="13" viewBox="0 0 11 13" fill="inherit" transform="rotate(-90)" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1.525 12.2226C1.19167 12.4393 0.854 12.4516 0.512 12.2596C0.170667 12.0683 0 11.7726 0 11.3726V1.02259C0 0.62259 0.170667 0.32659 0.512 0.13459C0.854 -0.0567435 1.19167 -0.0440767 1.525 0.17259L9.675 5.34759C9.975 5.54759 10.125 5.83092 10.125 6.19759C10.125 6.56426 9.975 6.84759 9.675 7.04759L1.525 12.2226Z" fill="white"/></div> -->
+    </div>
 
                 <!-- Here you will find your inspiration and get maximum pleasure from the procedure.
             After all, a manicure is not only
@@ -183,12 +192,6 @@
         </div>
     </div> -->
 
-    <!-- <div class="btn-to-top">
-        <div class="arrow__btn-to-top">        
-            <svg width="11" height="13" viewBox="0 0 11 13" fill="white" transform="rotate(-90)" xmlns="http://www.w3.org/2000/svg">
-            <path d="M1.525 12.2226C1.19167 12.4393 0.854 12.4516 0.512 12.2596C0.170667 12.0683 0 11.7726 0 11.3726V1.02259C0 0.62259 0.170667 0.32659 0.512 0.13459C0.854 -0.0567435 1.19167 -0.0440767 1.525 0.17259L9.675 5.34759C9.975 5.54759 10.125 5.83092 10.125 6.19759C10.125 6.56426 9.975 6.84759 9.675 7.04759L1.525 12.2226Z" fill="white"/></div>
-    </div> -->
-
     <!-- <script>
         const changeByScroll = document.querySelector('.btn-to-top');
 
@@ -199,7 +202,5 @@
             } else changeByScroll.classList.remove('appear')
         });
     </script> -->
-    <!-- <script src="js/btn_to_top.js"></script> -->
-    
 </body>
 </html>
