with wood done 1 var

--- a/index.html
+++ b/index.html
@@ -55,37 +55,34 @@
         <div class="slider__wrapper">
             <div class="slider__items">
                 <div class="slider__item">
-                    <img src="images/slides_pictures/big/scr1.png" alt="photo one">
+                    <img src="images/slides_pictures/gorizont/scr1.png" alt="photo one">
                 </div>
                 <div class="slider__item">
-                    <img src="images/slides_pictures/big/scr2.png" alt="photo two">
+                    <img src="images/slides_pictures/gorizont/scr2.png" alt="photo two">
                 </div>
                 <div class="slider__item">
-                    <img src="images/slides_pictures/big/scr3.png" alt="photo three">
+                    <img src="images/slides_pictures/gorizont/scr3.png" alt="photo three">
                 </div>
                 <div class="slider__item">
-                    <img src="images/slides_pictures/big/scr4.png" alt="photo four">
+                    <img src="images/slides_pictures/gorizont/scr4.png" alt="photo four">
                 </div>
                 <div class="slider__item">
-                    <img src="images/slides_pictures/big/scr5.png" alt="photo five">
+                    <img src="images/slides_pictures/gorizont/scr5.png" alt="photo five">
                 </div>
                 <div class="slider__item">
-                    <img src="images/slides_pictures/big/scr6.png" alt="photo six">
+                    <img src="images/slides_pictures/gorizont/scr6.png" alt="photo six">
                 </div>
                 <div class="slider__item">
-                    <img src="images/slides_pictures/big/scr7.png" alt="photo seven">
+                    <img src="images/slides_pictures/gorizont/scr7.png" alt="photo seven">
                 </div>
                 <div class="slider__item">
-                    <img src="images/slides_pictures/big/scr8.png" alt="photo eight">
+                    <img src="images/slides_pictures/gorizont/scr8.png" alt="photo eight">
                 </div>
                 <div class="slider__item">
-                    <img src="images/slides_pictures/big/scr9.png" alt="photo nine">
+                    <img src="images/slides_pictures/gorizont/scr9.png" alt="photo nine">
                 </div>
                 <div class="slider__item">
-                    <img src="images/slides_pictures/big/scr10.png" alt="photo ten">
-                </div>
-                <div class="slider__item">
-                    <img src="images/slides_pictures/big/scr11.png" alt="photo eleven">
+                    <img src="images/slides_pictures/gorizont/scr10.png" alt="photo ten">
                 </div>
             </div>
         </div>
@@ -95,7 +92,9 @@
 
     <div class="insta" style="color: white">
         <h3>Also you can explore my instagram</h3>
-        <img src="images/logo__insta-color.png" alt="logo instagram color">
+        <a href="https://www.instagram.com/lns_nail/">
+            <img src="images/logo__insta-color.png" alt="logo instagram color">
+        </a>       
     </div>
 
     <div class="services screen" id="services">
