with wood done 1 var

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <img src="images/logo_negate.png" alt="nail studio belgrade beograde">
             </div> -->
             <div class="menu font-head">
-                <a href="#home" class="menu-color">Home</a>
+                <a href="" class="menu-color btn-to-home">Home</a>
                 <a href="#about" class="menu-color">About</a>
                 <a href="#services" class="menu-color">Services</a>
                 <a href="#contacts" class="menu-color">Contacts</a>
@@ -136,9 +136,11 @@
     </div>
 
     <div class="booking">
-        <button class="glow-button">
-            <span>Click me to book</span>
-        </button>
+        <a href="https://www.instagram.com/lns_nail/">
+            <button class="glow-button">
+                <span>Click me to book</span>
+            </button>
+        </a>
     </div>
 
     <div class="studio">
@@ -152,8 +154,12 @@
             <h3 class="font-head">CONTACT INFO</h3>
             <p class="font-paragraph">For booking you can write me to the direct instagram or telegram</p>
             <div class="footer__info-logos">
-                <img src="images/logo__insta-color.png" alt="logo instagram color">
-                <img src="images/logo_telegram-color.png" alt="logo telegram color">
+                <a href="https://www.instagram.com/lns_nail/">
+                    <img src="images/logo__insta-color.png" alt="logo instagram color">
+                </a> 
+                <a href="https://t.me/Lina_Ber">
+                    <img src="images/logo_telegram-color.png" alt="logo telegram color">
+                </a>
             </div>
         </div>
         <div class="footer__instagram">
