--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <img src="images/logo_negate.png" alt="nail studio belgrade beograde">
             </div> -->
             <div class="menu font-head">
-                <a href="" class="menu-color btn-to-home">Home</a>
+                <a href="#home" class="menu-color actived">Home</a>
                 <a href="#about" class="menu-color">About</a>
                 <a href="#services" class="menu-color">Services</a>
                 <a href="#contacts" class="menu-color">Contacts</a>
@@ -44,14 +44,14 @@
         </div>
     </div>
 
-    <div class="welcome screen" id="about">
+    <div class="welcome screen" id="#">
         <div class="welcome__font-block">
             <h2><span>LINA</span><br>NAIL STUDIO</h2>
             <p>Hello, I'm Lina. This is my personal studio of nail in Belgrade. If you want to have beautiful fingers, let's see how it diding.</p>
         </div>
     </div>
 
-    <div class="slider screen" data-slider="itc-slider" id="home">
+    <div class="slider screen" data-slider="itc-slider" id="about">
         <div class="slider__wrapper">
             <div class="slider__items">
                 <div class="slider__item">
@@ -143,13 +143,13 @@
         </a>
     </div>
 
-    <div class="studio">
+    <div class="studio screen" id="contacts">
         <div class="studio__image">
             <img src="images/studio/photo_studio.png" alt="studio photo">
         </div>
     </div>
 
-    <div class="footer screen" id="contacts">
+    <div class="footer">
         <div class="footer__info">
             <h3 class="font-head">CONTACT INFO</h3>
             <p class="font-paragraph">For booking you can write me to the direct instagram or telegram</p>
