new design if finished

--- a/index.html
+++ b/index.html
@@ -102,34 +102,37 @@
         <div class="cards">
             <div class="card active">
                 <p>Сombined manicure / hardware manicure without cover</p>
-                
+                <img src="/images/slides_pictures/gorizont/scr8.png" alt="">
                 <p>Price 1700 RSD</p>
             </div>
             <div class="card">
                 <p>Сombined manicure / hardware manicure coated monochrome</p>
-                <img src="https://media.makeameme.org/created/hello-mf.jpg" alt="">
+                <img src="/images/slides_pictures/gorizont/scr8.png" alt="">
                 <p>Price 2000 RSD</p>
             </div>
             <div class="card">
                 <p>Repair / rebuilding 1 nail</p>
-                <img src="https://www.meme-arsenal.com/memes/ffc13559c9f9c06d8037a37e53626878.jpg" alt="">
+                <img src="/images/slides_pictures/gorizont/scr8.png" alt="">
                 <p>Price 300 RSD</p>
             </div>
             <div class="card">
                 <p>Gel strengthening</p>
-                <img src="https://s3.memeshappen.com/memes/Oops-My-bad.jpg" alt="">
+                <img src="/images/slides_pictures/gorizont/scr8.png" alt="">
                 <p>Price 700 RSD</p>
             </div>
             <div class="card">
                 <p>Removal without coating and manicure</p>
+                <img src="/images/slides_pictures/gorizont/scr8.png" alt="">
                 <p>Price 500 RSD</p>
             </div>
             <div class="card">
                 <p>Male manicure without coating</p>
+                <img src="/images/slides_pictures/gorizont/scr8.png" alt="">
                 <p>Price 2000 RSD</p>
             </div>
             <div class="card">
                 <p>Design on request (negotiated in advance)</p>
+                <img src="/images/slides_pictures/gorizont/scr8.png" alt="">
                 <p>Price From 100 to 1000 RSD</p>
             </div>
         </div>
