new design if finished

--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
         <button class="slider__control" data-slide="next"></button>
     </div>
 
-    <div class="insta" style="color: white">
+    <!-- <div class="insta" style="color: white">
         <h3>Also you can explore my instagram</h3>
         <a href="https://www.instagram.com/lns_nail/">
             <img src="images/logo__insta-color.png" alt="logo instagram color">
         </a>       
-    </div>
+    </div> -->
 
     <div class="services screen" id="services">
         <h2>PRICE-LIST</h2>
